--- a/Program2/prijava/prijava.html
+++ b/Program2/prijava/prijava.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,11 +22,12 @@
         <label for="lozinka">Lozinka:</label>
         <input type="password" id="lozinka">
         <br><br>
-        <button>PRIJAVA</button>
+        <button onclick="prijava()">PRIJAVA</button>
     </article>
     <footer>
         <img src="svi-logo.PNG" alt="" width="48px">
         <p>© Martin Marčec | 2019/2020 | martin.marcec1@skole.hr</p>
     </footer>
+    <script src="prijavaScript.js"></script>
 </body>
 </html>
