--- a/canvas/svg.html
+++ b/canvas/svg.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>My first SVG</h1>
+<h1>Moj prvi SVG</h1>
 
 <svg width="100" height="100">
    <circle cx="50" cy="50" r="35" stroke="black" stroke-width="9" fill="red" />
